FEAT: Add group service api
