# pro-manager-service/internal/groupservice-manager/validate.go
@@ -1,0 +1,1 @@
+package groupservicemanager
